[package]
name = "rust_bucket"
version = "0.1.0"
authors = ["Dave Grijalva <grijalva@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "rust_bucket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "0.11.0"
byteorder = "1.3.4"
