[package]
authors = ["Dave Grijalva <grijalva@gmail.com>"]
edition = "2018"
name = "rust_bucket"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "rust_bucket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
redis-module = "1"
